--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["nuxion <nuxion@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pycryptodome = "^3.14.1"
+PyNaCl = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 ipython = "^8.3.0"
